--- a/HTML/FinalProject/home.css
+++ b/HTML/FinalProject/home.css
@@ -26,7 +26,7 @@ body{
 .title2{
     font-size: 4vw;
     position: absolute;
-    background-color: #f5f5f5;
+    background-color: #d3d3d3;
     top: 17%;
     left: 50%;
     width: 50%;
